<resources>
    <string name="app_name">register_p5</string>
    <string name="Register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="by_checking">By checking the box you agree to our Terms and Conditions.</string>
    <string name="already_hav">Already Have an Account?</string>
    <string name="log_in">Log In</string>
    <string name="homepage">Homepage</string>
    <string name="welcome">Welcome Username\nYour email has been activated\nYour phone has been registered</string>
</resources>