<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/Register"
        android:textAppearance="@style/register"
        android:fontFamily="sans-serif-black"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        android:paddingHorizontal="20dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:paddingHorizontal="20dp"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        android:paddingHorizontal="20dp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:paddingHorizontal="20dp"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/by_checking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_checking"
            android:textAppearance="@style/by_checking"
            android:gravity="top"
            />

    </LinearLayout>

    
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/register_button"
        android:text="@string/Register"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/already_hav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_hav"
            android:textAppearance="@style/already_hav"/>
        <TextView
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAppearance="@style/log_in"
            android:layout_marginStart="5dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>




</LinearLayout>